k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://github.com/cloud-native-garage-method-cohort/buildah-chongde
  labels:
    app: chongde-live-pfs
    app.kubernetes.io/instance: chongde-live-pfs
    app.kubernetes.io/name: chongde-live-pfs
    app.openshift.io/runtime: js
  name: chongde-live-pfs
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: chongde-live-pfs
      app.kubernetes.io/name: chongde-live-pfs
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: chongde-live-pfs
        app.kubernetes.io/name: chongde-live-pfs
    spec:
      containers:
        - env:
            - name: INGRESS_HOST
            - name: PROTOCOLS
            - name: LOG_LEVEL
              value: debug
          image: quay.io/hchongde/buildah-chongde
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: chongde-live-pfs
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
